z-index fixes

--- a/style.css
+++ b/style.css
@@ -59,13 +59,13 @@ body {
   height: 10vh;
   position: sticky;
   top: 0;
-  z-index: 99;
+  z-index: 90;
   justify-content: center;
 }
 .active-header {
   box-shadow: 0px 3px 6px #00000029;
   background: white !important;
-  z-index: 9999 !important;
+  z-index: 9990 !important;
   /* background-image: none !important; */
 }
 .header-wrapper {
@@ -117,6 +117,9 @@ body {
 }
 .nav-item:hover {
   color: #098c94;
+}
+.dropdown-menu {
+  z-index: 9999 !important;
 }
 .right-header .dropdown-menu.show {
   display: flex;
@@ -184,7 +187,7 @@ body {
 .mobile-sidebar-wrapper {
   display: none;
   position: fixed;
-  z-index: 999;
+  z-index: 990;
   top: 10vh;
   width: 100vw;
   /* min-height: 90vh; */
@@ -307,7 +310,7 @@ body {
   bottom: 0;
   top: -500px;
   opacity: 0.9;
-  z-index: 99;
+  z-index: 90;
   pointer-events: none;
 }
 #cover-left-bg-wrapper {
@@ -344,7 +347,7 @@ body {
 .cover-right-container {
   width: 60%;
   height: 100%;
-  z-index: 999;
+  z-index: 990;
 }
 .cover-left-container {
   width: 40%;
@@ -1034,7 +1037,7 @@ body {
     width: 100vw;
   }
   #ac-header {
-    z-index: 9999 !important;
+    z-index: 9990 !important;
   }
   .left-header {
     width: 80vw;
